# ansible-role-moodle

./: .ansible-lint  .gitignore  .travis.yml  README.md  molecule-requirements.yml  moodle-versions.md  play-check-2.yml  play-check.yml  pyproject.toml
.github/workflows/: ci.yml  lint.yml  module-moodle-edge.yml  molecule-all-images.yml  molecule-all.yml  molecule-image.yml  molecule.yml  release.yml
action_plugins/: check_moodle.py  moodletool.php
defaults/: main.yml
files/: moodletool.php
handlers/: main.yml
meta/: .galaxy_install_info  main.yml
molecule-images/: Makefile  README.md  moodle-ami.json  moodle-ami.pkr.hcl  requirements.yml
molecule-images/ansible/: playbook-mysql.yml  playbook-postgres.yml  vars-mysql.yml  vars.yml
molecule-images/vars/: debian12.vars.hcl  debian12.vars.json  rockylinux9.vars.hcl  rockylinux9.vars.json  ubuntu2204.vars.hcl  ubuntu2204.vars.json
molecule/checktools/: converge.yml  molecule.yml  verify.yml
molecule/default/: README.md  converge.yml  molecule.yml  playbook-test-check-moodle.yml  playbook-test-handlers.yml  playbook.yml  prepare.yml  requirements.yml  (+5 more)
patches/: aurora.patch
tasks/: configure-vars.yml  fetch-sources.yml  fetchsources.yml  installrun.yml  main.yml  php-default-cli.yml  php-runtime-facts.yml  phpsql-setup.yml  setup-dirs.yml  setup-moodle.yml  setup-moosh.yml  setupdirs.yml  setupmoosh.yml  tools.yml
templates/: config.php.alex.j2  config.php.j2
tests/: README.md  requirements.yml  test-check-moodle.yml  test-handlers.yml  test-setup.yml  test-vars.yml  test.sh  test.yml  test_local.sh
(+44 files in other folders)
